<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <EditText
        android:id="@+id/et_num4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/te_num4"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_num1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_num1" />

    <EditText
        android:id="@+id/et_num5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/et_num5"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_num2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_num2" />

    <TextView
        android:id="@+id/tv_num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/tv_num2"
        app:layout_constraintEnd_toStartOf="@+id/et_num5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_num1" />

    <TextView
        android:id="@+id/tv_num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/tv_num1"
        app:layout_constraintEnd_toStartOf="@+id/et_num4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="44dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/tv_value1"
        android:layout_width="207dp"
        android:layout_height="77dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_value1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_num5" />

    <Button
        android:id="@+id/bt_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:onClick="Add"
        android:text="@string/bt_plus"
        app:layout_constraintBaseline_toBaselineOf="@+id/bt_minus"
        app:layout_constraintStart_toEndOf="@+id/bt_minus" />

    <Button
        android:id="@+id/bt_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="64dp"
        android:onClick="onClickSubtract"
        android:text="@string/bt_minus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_value1" />

    <Button
        android:id="@+id/bt_divi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:onClick="onClickDivide"
        android:text="@string/bt_divi"
        app:layout_constraintBaseline_toBaselineOf="@+id/bt_mult"
        app:layout_constraintStart_toEndOf="@+id/bt_mult" />

    <Button
        android:id="@+id/bt_mult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="32dp"
        android:onClick="onClickMultiply"
        android:text="@string/bt_mul"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_minus" />

</androidx.constraintlayout.widget.ConstraintLayout>